# xn

./: .gitmodules  Cargo.toml
.githooks/: pre-commit
scripts/: setup-git-hooks.sh
wasm-pocket-tts/: Cargo.toml
xn-core/: Cargo.toml
xn-core/cuda-kernels/: arithmetic.cu  conv.cu  fattn.cu
xn-core/examples/: basic_cuda.rs
xn-core/src/: backend.rs  cpu_backend.rs  cuda_backend.rs  cuda_kernels.rs  error.rs  inplace_ops.rs  ops.rs  tensor.rs  tensor_view.rs
xn-core/src/nn/: sampling.rs  var_builder.rs
xn-core/tests/: tensor_tests.rs
xn-flash-attn/: Cargo.toml  README  build.rs
xn-flash-attn/csrc/: flash.h  flash_api.cu  flash_bwd_launch_template.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  philox_unpack.cuh
xn-flash-attn/examples/: bench.rs
xn-flash-attn/src/: ffi.rs  lib.rs
xn-moshi/: Cargo.toml
xn-moshi/examples/: moshi.rs
xn-moshi/src/: transformer.rs
xn-pocket-tts/: Cargo.toml
xn-pocket-tts/examples/: pocket_tts.rs
xn-pocket-tts/src/: conditioners.rs  flow_lm.rs  lib.rs  mimi.rs  mimi_transformer.rs  mlp.rs  tts_model.rs
