[workspace]
members = ["xn-core", "xn-pocket-tts", "wasm-pocket-tts", "xn-moshi"]
exclude = ["xn-flash-attn"]
resolver = "3"

[workspace.dependencies]
xn = { path = "xn-core" }
pocket_tts = { path = "xn-pocket-tts" }
anyhow = "1"
bindgen_cuda = "0.1.6"
clap = { version = "4", features = ["derive"] }
cudarc = { version = "0.19.0", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"] }
gemm = { version = "0.19.0", features = ["wasm-simd128-enable"] }
getrandom = "0.3"
half = { version = "2.7.1", features = ["num-traits"] }
hf-hub = "0.4"
js-sys = "0.3"
kaudio = "0.2.1"
libc = "0.2"
libm = "0.2"
memmap2 = "0.9"
num-traits = "0.2.19"
num_cpus = "1.17.0"
paste = "1"
rand = { version = "0.9.0", default-features = false }
rand_distr = "0.5.0"
rayon = "1.11.0"
safetensors = "0.4"
rubato = "0.15.0"
sentencepiece = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.3", features = ["all"] }
thiserror = "2.0.17"
tokenizers = "0.21"
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.22"
wasm-bindgen = "0.2"
yoke = { version = "0.8.1", features = ["derive"] }

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
