[package]
name = "wasm-pocket-tts"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pocket_tts = { workspace = true }
xn = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
rand = { workspace = true, default-features = false, features = ["std_rng"] }
rand_distr = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
