[package]
name = "xn"
version = "0.1.0"
edition = "2024"
description = "Another minimalist deep-learning framework optimized for inference."
repository = "https://github.com/LaurentMazare/xn"
keywords = ["pytorch", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"

[dependencies]
cudarc = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
kaudio = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
libm = { workspace = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
yoke = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hf-hub = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
tracing-chrome = { workspace = true }

[build-dependencies]
bindgen_cuda = { workspace = true, optional = true }

[features]
default = []
accelerate = ["dep:libc"]
audio = ["dep:kaudio"]
cuda = ["dep:cudarc", "dep:bindgen_cuda"]

[[example]]
name = "mimi"
required-features = ["audio"]

[[example]]
name = "demucs"
required-features = ["audio"]

[[example]]
name = "basic_cuda"
required-features = ["cuda"]

[[example]]
name = "cuda_thread_test"
required-features = ["cuda"]
