[package]
name = "xn-flash-attn"
version = "0.1.0"
edition = "2024"

description = "Flash attention bindings for the XN ML framework."
repository = "https://github.com/LaurentMazare/xn"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
xn = { path = "../xn-core", features = ["cuda"], version = "0.1.0" }
half = { version = "2.7.1", features = ["num-traits"] }

[build-dependencies]
bindgen_cuda = "0.1.1"
anyhow = { version = "1", features = ["backtrace"] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[features]
default = []
