[package]
name = "xn-moshi"
version = "0.1.0"
edition = "2024"

[dependencies]
xn = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
kaudio = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
half = { workspace = true }
hf-hub = { workspace = true }
sentencepiece = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
cuda = ["xn/cuda"]
audio = ["dep:kaudio"]

[[example]]
name = "moshi"
required-features = ["audio"]
