[package]
name = "pocket_tts"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
xn = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
rand_distr = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sentencepiece = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hf-hub = { workspace = true }
rubato = { workspace = true }
serde_json = { workspace = true }
symphonia = { workspace = true }
tracing-chrome = { workspace = true }

[features]
default = []
cuda = ["xn/cuda"]
sp = ["dep:sentencepiece"]

[[example]]
name = "pocket_tts"
required-features = ["sp"]
